apps/mundados/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mundados
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mundados.ramoneees.com`)
      kind: Rule
      services:
        - name: mundados-portal
          port: 3000
  tls:
    certResolver: letsencrypt
